# halyard-fleet

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
bridge/: _settings.py  hook.sh  hook_bridge.py  observe.sh  permission_hook.sh  relay.py
docs/: architecture.md  before-you-wire-it.md  codex-adapter-brief.md  codex-adapter-findings.md  hook-payload-notes.md  session-io-notes.md  setup.md  telegram.md
docs/postmortem/: 2026-07-23-claude-desktop-live-session-sync.md  2026-07-23-codex-telegram-routing.md
scripts/: rollback-runtime-routing-fixes.sh  rollout-runtime-routing-fixes.sh
src/halyard/: __init__.py  __main__.py  config.py  doctor.py  setup_cli.py  verify.py  wiring.py
src/halyard/agents/: __init__.py  base.py
src/halyard/agents/claude_code/: __init__.py  runner.py  sessions.py
src/halyard/api/: __init__.py  app.py
src/halyard/channels/: __init__.py  base.py  stub.py
src/halyard/core/: __init__.py  approvals.py  audit.py  events.py  gate.py  policy.py  redaction.py  registry.py  seats.py  service.py
tests/: test_api.py  test_approvals.py  test_audit.py  test_bridge.py  test_bridge_settings.py  test_codex.py  test_config.py  test_config_to_routing.py  test_doctor.py  test_end_to_end.py  test_events.py  test_gate.py  test_logging.py  test_policy.py  test_redaction.py  test_registry.py  test_relay.py  test_runner.py  test_seat_contract.py  test_seats.py  test_service.py  test_setup_cli.py  test_telegram.py  test_wiring.py
(+7 files in other folders)
